# exceptional

./: .gitignore  .travis.yml  LICENSE.rst  Makefile  README.rst  exceptional.py  requirements-test.txt  setup.cfg  setup.py  test_exceptional.py  tox.ini
doc/: conf.py  index.rst
src/exceptional/: __init__.py  exceptional.py
