[metadata]
name = exceptional
version = 2024.1.0
author = wouter bolsterlee
author_email = wouter@bolsterl.ee
license = BSD
license_file = LICENSE.rst
description = exception handling utilities
long_description = file: README.rst
url = https://github.com/wbolster/exceptional
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages=find:
package_dir=
    =src
python_requires = >=3.8

[options.packages.find]
where=src

[options.package_data]
exceptional = py.typed

[bdist_wheel]
universal = 1

[build_sphinx]
source-dir = doc/
build-dir = doc/build/

[tool:pytest]
addopts = --cov exceptional --cov-branch --cov-report term-missing
